# footprint

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.claude/: settings.json
app/: globals.css  layout.tsx  page.tsx
app/seed/: page.tsx
app/settings/: page.tsx
app/trash/: page.tsx
components/: AppShell.tsx  ArchivingModal.tsx  ChinaLocationFields.tsx  ConfirmModal.tsx  CoverPhotoPanel.tsx  EditJourneyHeader.tsx  EmptyState.tsx  HighlightsPreview.tsx  ImportProgress.tsx  JourneyCard.tsx  JourneyForm.tsx  JourneyGrid.tsx  LibrarySetupOverlay.tsx  LibrarySetupScreen.tsx  MemorySearch.tsx  NoteTooltip.tsx  PhotoGrid.tsx  PhotoLightbox.tsx  PhotoTile.tsx  PlaceJourneyGroups.tsx  SegmentedTabs.tsx  TimelineJourneyGroups.tsx  TopNav.tsx  UploadDropzone.tsx
docs/: BACKLOG.md  DESIGN.md  LOCAL_LIBRARY.md  PRIVACY.md  PRODUCT.md  ROADMAP.md  TASKS.md
docs/requests/: FOOTPRINT_V1_2_CLAUDE_PROMPT.md  FOOTPRINT_V1_3_CLAUDE_PROMPT.md  (+12 more)
lib/: browseModes.ts  chinaLocations.ts  environment.ts  image-storage.ts  mock-data.ts  note-tooltip-position.ts  settings.ts  storage.ts  types.ts  utils.ts
scripts/: launch-footprint.bat  seed-desktop-db.js  seed-test-data.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
tests/: china-location-fields.test.cjs  desktop-foundation.test.cjs  homepage-actions.test.cjs  note-tooltip-position.test.cjs  place-axis-layout.test.cjs  place-groups.test.cjs  storage.test.cjs  timeline-groups.test.cjs
(+18 files in other folders)
