[package]
name = "footprint"
version = "2.1.0"
description = "Footprint — Personal travel photo memory app"
authors = ["Footprint"]
license = "MIT"
repository = "https://github.com/zhb2530545428-hue/footprint"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
